--- a/testMyLethalMod/ExperimentalEnemyInteractions.csproj
+++ b/testMyLethalMod/ExperimentalEnemyInteractions.csproj
@@ -1,17 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <!-- BepInEx Properties -->
     <PropertyGroup>
-        <AssemblyName>testMyLethalMod</AssemblyName>
-        <Product>testMyLethalMod</Product>
+        <AssemblyName>ExperimentalEnemyInteractions</AssemblyName>
+        <Product>ExperimentalEnemyInteractions</Product>
         <!-- Change to whatever version you're currently on. -->
-        <Version>1.0.0</Version>
+        <Version>0.1.3</Version>
     </PropertyGroup>
 
     <!-- Project Properties -->
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
-        <RootNamespace>testMyLethalMod</RootNamespace>
+        <RootNamespace>ExperimentalEnemyInteractions</RootNamespace>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <LangVersion>latest</LangVersion>
     </PropertyGroup>
