--- a/ExperimentalEnemyInteractions/manifest.json
+++ b/ExperimentalEnemyInteractions/manifest.json
@@ -3,5 +3,6 @@
     "version_number": "0.1.10",
     "website_url": "https://github.com/Fandovec03/ExperimentalEnemyInteractions",
     "description": " *WIP* Experimental. Aims to make the game, especially the fauna feel more alive.",
-    "dependencies": []
+  "dependencies": ["Fandovec03-SpiderPositionFix-1.0.0",
+  ]
 }
