--- a/ExperimentalEnemyInteractions/NaturalSelection.csproj
+++ b/ExperimentalEnemyInteractions/NaturalSelection.csproj
@@ -2,10 +2,10 @@
 
     <!-- BepInEx Properties -->
     <PropertyGroup>
-        <AssemblyName>fandovec03.ExperimentalEnemyInteractions</AssemblyName>
-        <Product>ExperimentalEnemyInteractions</Product>
+        <AssemblyName>fandovec03.NaturalSelection</AssemblyName>
+        <Product>NaturalSelection</Product>
         <!-- Change to whatever version you're currently on. -->
-        <Version>0.2.0</Version>
+        <Version>0.1.2</Version>
     </PropertyGroup>
 
     <!-- Project Properties -->
