--- a/ExperimentalEnemyInteractions/manifest.json
+++ b/ExperimentalEnemyInteractions/manifest.json
@@ -2,6 +2,6 @@
   "name": "Natural_selection",
   "version_number": "0.1.2",
   "website_url": "https://github.com/Fandovec03/ExperimentalEnemyInteractions",
-  "description": "(Experimental branch) Rewamps the ecosystem to feel more alive and immersive.",
+  "description": "Rewamps the ecosystem to feel more alive and immersive.",
   "dependencies": [ "Fandovec03-SpiderPositionFix-1.1.2", "Fandovec03-NaturalSelectionLib-0.4.0" ]
 }
