--- a/ExperimentalEnemyInteractions/manifest.json
+++ b/ExperimentalEnemyInteractions/manifest.json
@@ -3,5 +3,7 @@
   "version_number": "0.2.1",
   "website_url": "https://github.com/Fandovec03/ExperimentalEnemyInteractions",
   "description": "Rewamps the ecosystem to feel more alive and immersive.",
-  "dependencies": [ "Fandovec03-SpiderPositionFix-1.1.2", "Fandovec03-NaturalSelectionLib-0.4.0" ]
+  "dependencies": [ "Fandovec03-SpiderPositionFix-1.1.2",
+	"Fandovec03-NaturalSelectionLib-0.4.0",
+	"Fandovec03-Natural_selection-0.1.2"]
 }
