--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+ExperimentalEnemyInteractions/CHANGELOG.md
+ExperimentalEnemyInteractions/manifest.json
+ExperimentalEnemyInteractions/DLLs/fandovec03.NaturalSelection.dll
