--- a/ExperimentalEnemyInteractions/NaturalSelection.csproj
+++ b/ExperimentalEnemyInteractions/NaturalSelection.csproj
@@ -5,7 +5,7 @@
         <AssemblyName>fandovec03.NaturalSelection</AssemblyName>
         <Product>NaturalSelection</Product>
         <!-- Change to whatever version you're currently on. -->
-        <Version>0.2.3</Version>
+        <Version>990.2.4</Version>
     </PropertyGroup>
 
     <!-- Project Properties -->
@@ -47,8 +47,8 @@
         <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" PrivateAssets="all" />
         <PackageReference Include="LethalCompany.GameLibs.Steam" Version="*-*" PrivateAssets="all" />
         <PackageReference Include="UnityEngine.Modules" Version="2022.3.9" IncludeAssets="compile" PrivateAssets="all" />
-		<PackageReference Include="fandovec03.NaturalSelectionLib" Version="0.6.0" />
-		<PackageReference Include="Xilophor.LethalNetworkAPI" Version="3.3.1" PrivateAssets="all" />
+		<PackageReference Include="fandovec03.NaturalSelectionLib" Version="0.6.2-beta" />
+		<PackageReference Include="Xilophor.LethalNetworkAPI" Version="3.3.2" PrivateAssets="all" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
