--- a/ExperimentalEnemyInteractions/manifest.json
+++ b/ExperimentalEnemyInteractions/manifest.json
@@ -1,10 +1,11 @@
 {
-  "name": "ExperimentalEnemyInteraction",
-  "version_number": "0.4.0",
+  "name": "Natural_selection",
+  "version_number": "0.2.4",
   "website_url": "https://github.com/Fandovec03/LC-NaturalSelection",
   "description": "Rewamps the ecosystem to feel more alive and immersive.",
   "dependencies": [
     "Fandovec03-SpiderPositionFix-1.2.0",
+    "Fandovec03-NaturalSelectionLib-0.6.3",
     "xilophor-LethalNetworkAPI-3.3.2"
   ]
 }
