--- a/ExperimentalEnemyInteractions/manifest.json
+++ b/ExperimentalEnemyInteractions/manifest.json
@@ -2,7 +2,7 @@
   "name": "ExperimentalEnemyInteractions",
   "version_number": "0.5.4",
   "website_url": "https://github.com/Fandovec03/LC-NaturalSelection",
-  "description": "Rewamps the ecosystem to feel more alive and immersive.",
+  "description": "Rewamps the ecosystem to feel more alive and immersive. Creatures will fight each other and hunt for survival.",
   "dependencies": [
     "Fandovec03-SpiderPositionFix-1.5.1",
     "xilophor-LethalNetworkAPI-3.3.2"
