Sellbodies and Enhanced monsters compatibility concepts

--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,5 @@ ExperimentalEnemyInteractions/manifest.json
 ExperimentalEnemyInteractions/DLLs/fandovec03.NaturalSelection.dll
 /ExperimentalEnemyInteractions/DLLs
 ExperimentalEnemyInteractions/ExperimentalEnemyInteractions.zip
+ExperimentalEnemyInteractions/TEMP/EnhancedMonsters.dll
+ExperimentalEnemyInteractions/TEMP/SellBodies.dll
