--- a/ExperimentalEnemyInteractions/NaturalSelection.csproj
+++ b/ExperimentalEnemyInteractions/NaturalSelection.csproj
@@ -49,6 +49,10 @@
         <PackageReference Include="UnityEngine.Modules" Version="2022.3.9" IncludeAssets="compile" PrivateAssets="all" />
 		<PackageReference Include="fandovec03.NaturalSelectionLib" Version="0.6.7" />
 		<PackageReference Include="Xilophor.LethalNetworkAPI" Version="3.3.2" PrivateAssets="all" />
+		<PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.3">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+		</PackageReference>
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
@@ -57,5 +61,12 @@
 
     <ItemGroup>
       <Folder Include="DLLs\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="TEMP\SellBodies.dll" Publicize="true" PrivateAssets="all">
+      </Reference>
+      <Reference Include="TEMP\EnhancedMonsters.dll">
+      </Reference>
     </ItemGroup>
 </Project>
