Added compatibility for Rexuvination

--- a/.gitignore
+++ b/.gitignore
@@ -368,3 +368,4 @@ ExperimentalEnemyInteractions/DLLs/fandovec03.NaturalSelection.dll
 ExperimentalEnemyInteractions/ExperimentalEnemyInteractions.zip
 ExperimentalEnemyInteractions/TEMP/EnhancedMonsters.dll
 ExperimentalEnemyInteractions/TEMP/SellBodies.dll
+ExperimentalEnemyInteractions/TEMP/ReXuvination.dll
