--- a/ExperimentalEnemyInteractions/manifest.json
+++ b/ExperimentalEnemyInteractions/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Natural_Selection",
+  "name": "Natural_selection",
   "version_number": "0.3.0",
   "website_url": "https://github.com/Fandovec03/LC-NaturalSelection",
   "description": "Rewamps the ecosystem an enemies to feel more alive and interactable. Enemies will fight each other and hunt to survive.",
   "dependencies": [
     "Fandovec03-SpiderPositionFix-1.5.1",
     "Fandovec03-NaturalSelectionLib-0.6.7",
-    "xilophor-LethalNetworkAPI-3.3.3"
+    "xilophor-LethalNetworkAPI-3.3.2"
   ]
 }
