--- a/ExperimentalEnemyInteractions/NaturalSelection.csproj
+++ b/ExperimentalEnemyInteractions/NaturalSelection.csproj
@@ -46,7 +46,6 @@
         <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" PrivateAssets="all" />
         <PackageReference Include="LethalCompany.GameLibs.Steam" Version="*-*" PrivateAssets="all" />
         <PackageReference Include="UnityEngine.Modules" Version="2022.3.9" IncludeAssets="compile" PrivateAssets="all" />
-		<PackageReference Include="fandovec03.NaturalSelectionLib" Version="0.6.7" />
 		<PackageReference Include="Xilophor.LethalNetworkAPI" Version="3.3.2" PrivateAssets="all" />
 		<PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.3">
 			<PrivateAssets>all</PrivateAssets>
@@ -63,6 +62,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Reference Include="fandovec03.NaturalSelectionLib">
+        <HintPath>..\..\NaturalSelectionLib\NaturalSelectionLib\bin\Debug\netstandard2.1\fandovec03.NaturalSelectionLib.dll</HintPath>
+      </Reference>
       <Reference Include="TEMP\ReXuvination.dll" Publicize="true">
       </Reference>
       <Reference Include="TEMP\EnhancedMonsters.dll">
