--- a/.gitignore
+++ b/.gitignore
@@ -369,3 +369,4 @@ ExperimentalEnemyInteractions/ExperimentalEnemyInteractions.zip
 ExperimentalEnemyInteractions/TEMP/EnhancedMonsters.dll
 ExperimentalEnemyInteractions/TEMP/SellBodies.dll
 ExperimentalEnemyInteractions/TEMP/ReXuvination.dll
+ExperimentalEnemyInteractions/TEMP/StarlancerAI.dll
